--- a/circle.yml
+++ b/circle.yml
@@ -5,4 +5,10 @@ deployment:
     branch: master
     codedeploy:
       Dantest:
-        deployment_group: my-deployment-group
+		application_root: /
+		region: eu-west-1
+		revision_location:
+			revision_type: S3
+			s3_location:
+				bucket: dan-test-cloud
+				key_pattern: Dantest-{BRANCH}-{SHORT_COMMIT}
