--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 sudo: required
 language: node_js
-
+node_js:
+  - "0.8"
+  - "0.10"
 deploy:
       - provider: s3
          # rest of S3 deployment for MyApp.zip
