--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: node_js
 node_js:
   - "0.8"
   - "0.10"
+script:
+  - echo "Hello World"
 deploy:
       - provider: s3
          # rest of S3 deployment for MyApp.zip
