--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,13 @@ sudo: required
 language: node_js
 node_js:
   - "0.8"
-  - "0.10"
 script:
   - echo "Hello World"
 deploy:
-      - provider: s3
-         # rest of S3 deployment for MyApp.zip
-      - provider: codedeploy
+        provider: codedeploy
         access_key_id: AKIAJJKQWOHYZAD2CBSA
         secret_access_key: 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
-        bucket: "dan-test-cloud"
+        bucket: dan-test-cloud
         key: latest/TestCloud.zip
         application: TestCloud
         deployment_group: MyDeploymentGroup
