--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ general:
   build_dir: circle
 test:
   override:
-       run_build.sh
+        - run_build.sh
 deployment:
   staging:
     branch: master
