--- a/circle.yml
+++ b/circle.yml
@@ -4,12 +4,7 @@ test:
   override:
         - echo "hello world"
 deployment:
-  staging:
+  aws:
     branch: master
-    codedeploy:
-        region: eu-west-1
-        revision_location:
-            revision_type: S3
-            s3_location:
-                bucket: dan-test-cloud
-                key_pattern: Dantest-{BRANCH}-{SHORT_COMMIT}
+        commands:
+        - echo "hello world"
