--- a/circle.yml
+++ b/circle.yml
@@ -6,5 +6,10 @@ test:
 deployment:
   staging:
     branch: master
-    commands:
-    - echo "hello world"
+    codedeploy:
+        region: eu-west-1
+        revision_location:
+            revision_type: S3
+            s3_location:
+                bucket: dan-test-cloud
+        
