--- a/circle.yml
+++ b/circle.yml
@@ -7,8 +7,12 @@ deployment:
   staging:
     branch: master
     codedeploy:
+      Dantest:
+        application_root: /
         region: eu-west-1
         revision_location:
             revision_type: S3
             s3_location:
                 bucket: dan-test-cloud
+                key_pattern: Dantest-{BRANCH}-{SHORT_COMMIT}
+        deployment_group: my-deployment-group
