--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,7 @@ deployment:
   staging:
     branch: master
     codedeploy:
-      Dantest:
+      TestCloud:
         application_root: /
         region: eu-west-1
         revision_location:
